# JARVIS_OS

./: .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE_ENHANCEMENTS.md  AUDIT_FIX_SUMMARY.md  CLAUDE.md  COMPLETE_TESTING_GUIDE.md  CRITICAL_SPECIFICATIONS.md  JARVIS_UNIFIED_PLAN.md  LICENSE  PHASE_0_1_VALIDATION_COMPLETE.md  PHASE_0_GETTING_STARTED.md  PHASE_1_FINAL_CHECKLIST.md  PHASE_1_MANUAL_VERIFICATION.md  PROJECT_OVERVIEW.md  QUICK_START_TESTING.md  README.md  RUN_JARVIS.md  Read-in-this-order.txt  SESSION_2025-11-17_SUMMARY.md  TEST_CLEANUP_SUMMARY.md  THIRD_PARTY_LICENSES.md  WEEK_9_QUICKSTART_CLI.md  build_sel4_jarvis.sh  envioment.yml  format_sd.txt  jarvis-strategist.skill  phase2-boot-artifact-pipeline.skill  requirements.txt  run_all_tests_wsl.sh  setup_wsl_dependencies.sh  temp_build.sh  test_cache_demo  test_cache_demo.c  test_cache_hits  test_cache_hits.c  test_realistic_usage  test_realistic_usage.c  test_sysadmin  test_sysadmin.c
.claude/: settings.local.json
.github/workflows/: ci.yml
archive/: PROJECT_OVERVIEW.md
archive/analysis/: claude_sonnet_ultrathink_analysis.md  opus_ultrathink-but-not-in-claudecode.txt
archive/docs/: AUDIT_FIX_SUMMARY.md  COMPLETE_TESTING_GUIDE.md  PHASE_0_1_VALIDATION_COMPLETE.md  PHASE_1_FINAL_CHECKLIST.md  PHASE_1_MANUAL_VERIFICATION.md  QUICK_START_TESTING.md  TEST_CLEANUP_SUMMARY.md
archive/plans/: sonnet4.5-plan2.txt
archive/research/: jarvis_quick_ref.md  jarvis_research_findings.md
briefings/: 2026-06-16-tech-briefing.md  2026-06-17-tech-briefing.md  2026-06-18-tech-briefing.md  2026-06-19-tech-briefing.md  2026-06-24-tech-briefing.md  2026-06-26-tech-briefing.md
docs/: AUDIT_REPORT.md  AUDIT_W27_W34.md
docs/decisions/: 2026-04-17-remove-dynamic-model-scaling.md  2026-06-15-defer-30-day-x86-stability-soak.md  2026-06-15-defer-turboquant-rotorquant-to-phase4.md  2026-06-16-defer-gpu-inference.md  2026-06-16-x86-verification-stance.md  2026-06-17-enable-smp-branch-a.md  2026-06-21-adopt-headless-appliance-remote-console.md  2026-06-25-target-disk-full-ssd-install.md
jarvis-strategist/: SKILL.md
models/: bench_results.txt  jarvis_engine_bench.txt
models/bench_results/: bench_results_mainpc.txt  bench_results_mainpc_gpu.txt  jarvis_engine_bench.txt  jarvis_engine_jarvis-System-Product-Name.txt  jarvis_engine_qdot_1T_jarvispc.txt  perplexity_results.txt
models/quality_results/: ALL_RESPONSES.txt  FINAL_SCORES.txt  JUDGE_CONSENSUS.txt  Llama-3.2-1B-Instruct-Q4_K_M.txt  Llama-3.2-3B-Instruct-Q4_K_M.txt  Meta-Llama-3.1-8B-Instruct-Q4_K_M.txt  Phi-3-mini-4k-instruct-q4.txt  Qwen3-4B-Q4_K_M.txt  Qwen3.5-4B-Q4_K_M.txt  Qwen3.5-9B-Q4_K_M.txt  gemma-4-E2B-it-Q4_K_M.txt  google_gemma-4-E4B-it-Q4_K_M.txt  mistral-7b-instruct-v0.2.Q8_0.txt  tinyllama-1.1b-chat-v1.0.Q4_K_M.txt
phase0/: PHASE_0_COMPLETION_AUDIT.md  PHASE_0_CURRENT_STATUS.md  PHASE_0_FINAL_REPORT.md  PHASE_0_VALIDATION_RESULTS.md  PHASE_0_VALIDATION_SPEC.md
phase0/experiments/: RUN_EXPERIMENTS.md  adversarial_safety_tests.py  adversarial_safety_tests_simple.py  ai_inference_benchmark.py  benchmark_phi3.py  conflict_resolution_tests.py  download_phi3.py  fix_gpu_inference.py  ipc_latency_benchmark.c  multi_agent_orchestration.py  output.txt  phi3_comparison_results.md  power_management_validation.py  shield_safety_framework.py
phase1/: COMPREHENSIVE_TEST_PLAN.md  README.md
phase1/docs/: HOW_TO_RUN.md  PHASE_1_ARCHITECTURE.md  PHASE_1_DEVELOPMENT_SETUP.md  PHASE_1_DEVIATIONS.md  PHASE_1_FINAL_REPORT.md  PHASE_1_IMPLEMENTATION_PLAN.md  PHASE_1_KICKOFF.md  (+6 more)
phase1/src/sel4/: CMakeLists.txt  README.md  dual_ring_buffer.c  dual_ring_buffer.h  ipc_handler.c  ipc_handler.h  main.c  main_week28.c  pci_ivshmem.c  pci_ivshmem.h  stdin_impl.c  stdin_impl.h
phase2/: BOOT_CHECKLIST.md  BOOT_PI4_QUICKSTART.md  copy_to_sd.bat  jarvis_cmake.txt  jarvis_cmake_noregen.txt  jarvis_combined.c  temp_build_jarvis.sh  temp_cmake.txt  temp_makefile.tii  temp_settings.cmake  temp_tutorial_cmake.txt
phase2/src/jarvis-sel4-cmake/: CMakeLists.txt
phase3/: README.md
phase3/src/: CMakeLists.txt
phase3/src/ai/: GGML_PORTABILITY_NOTES.md  bench_engine.c  bench_inference.c  bench_turboquant.c  cache_patterns.c  cache_patterns.h  check_reference_logits.py  debug_reference.c  decision_cache.c  decision_cache.h  dequant.c  dequant.h  episodic_store.c  episodic_store.h  g3_retrieval.c  g3_retrieval.h  ggml_backend_stubs.c  gguf_parser.c  gguf_parser.h  gguf_vocab.c  gguf_vocab.h  inference.c  inference.h  llama_forward.c  llama_forward_tq.c  llama_forward_tq.h  llama_load.c  llama_model.h  llama_quant.c  llama_quant.h  model_scaling.c  model_scaling.h  posix_stubs.c  posix_stubs.h  qdot.c  qdot.h  qmatmul.h  qmodel_tq_forward.c  qmodel_tq_forward.h  sampling.c  (+50 more)
phase3/src/ai/test_sel4_stubs/sel4/: sel4.h
phase3/src/drivers/: ahci.c  ahci.h  blk_dev_x86.c  blk_dev_x86.h  fat32.c  fat32.h  framebuffer.c  framebuffer.h  fuzz_harness.c  jarvis_telemetry.c  jarvis_telemetry.h  net_cmd.c  net_stack.c  net_stack.h  net_udp.c  net_udp.h  nic_i211.c  nic_i211.h  nic_rtl8168.c  nic_rtl8168.h  nvme.c  nvme.h  nvme_log.c  nvme_log.h  pci.c  pci.h  test_ahci.c  test_ahci_io.c  test_blk_dev.c  test_fat32.c  test_framebuffer.c  test_jarvis_telemetry.c  test_net_cmd.c  test_net_stack.c  test_net_udp.c  test_nic.c  test_nic_i211.c  test_nvme.c  test_nvme_log.c  test_pci.c  (+9 more)
phase3/src/ipc/: dual_ring_buffer.c  ipc_handler.c  ipc_handler.h  ipc_transport.h  ring_buffer.c  ring_buffer.h  sel4_atomics.h  shmem_ipc.c  shmem_ipc.h  test_shmem_crc.c  test_shmem_ipc.c
phase3/src/sel4/: CMakeLists.txt  avx2_probe.h  easy-settings-reference.cmake  inference_server.c  jarvis_debug.h  jarvis_ui_tokens.h  main_x86.c  smp_probe.h
stability_logs/: stability_checkpoint.json  stability_log_2026-02-13.csv  stability_log_2026-02-15.csv  stability_log_2026-02-18.csv  stability_log_2026-03-15.csv  stability_summary.csv
stability_logs_3-DAY_TEST/: NOTES.txt  stability_checkpoint.json  stability_log_2026-03-18.csv  stability_summary.csv
temp_sd_backup/: boot.scr  config.txt
wsl_copy/: README.md
(+452 files in other folders)
